clusters/server/apps/recipes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes
  namespace: recipes
spec:
  selector: { app: recipes }
  ports:
    - port: 80
      targetPort: 80
